:hammer: [JIRA-S12P11B106-64] Feat : 토론 요약본 출력 페이지 구현 완료, api 요청 URL 수정, packages.json 업데이트

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,11 +21,13 @@
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
+    "github-markdown-css": "^5.8.1",
     "openvidu-browser": "^2.31.0",
     "openvidu-node-client": "^2.31.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-markdown": "^9.0.3",
     "react-router-dom": "^7.1.5",
     "react-share": "^5.2.0",
     "react-social-icons": "^6.22.0",
