🔨 [JIRA-S12P11B106-169] Fix : nginx api 경로 변경

--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -55,4 +55,12 @@ server {
         access_log off;
         log_not_found off;
     }
+    
+    # ✅ 🚀 **API 요청을 백엔드(FastAPI, Django 등)로 프록시 설정**
+    location /api/ {
+        proxy_pass http://backend:8000;  # ✅ 백엔드 컨테이너 주소 (FastAPI, Django 등)
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 }
