🧱 [JIRA-S12P11B106-169] Feature: 최신 버전 반영
- 토큰 저장되도록 변경경

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ before_script:
   - docker info
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 
+  - echo $TAG
   - mkdir -p ~/.ssh
   - echo "🔑 Set ENV"
 
