--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -42,7 +42,7 @@ server {
     index index.html;
     
     location / {
-        try_files $uri $uri/ =404;
+        try_files $uri /index.html;
     }
 
     location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|otf|svg|map|json)$ {
@@ -58,7 +58,7 @@ server {
     
     # ✅ 🚀 **API 요청을 백엔드(FastAPI, Django 등)로 프록시 설정**
     location /api/ {
-        proxy_pass http://backend:8000;  # ✅ 백엔드 컨테이너 주소 (FastAPI, Django 등)
+        proxy_pass http://backend:8000/api/;  # ✅ 백엔드 컨테이너 주소 (FastAPI, Django 등)
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
