--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -29,24 +29,24 @@ services:
     networks:
       - app_network
     
-  Nginx (Reverse Proxy)
-  nginx:
-    image: nginx:latest
-    container_name: nginx
-    restart: unless-stopped
-    volumes:
-      - ./frontend:/app/frontend
-      - ./nginx/conf.d:/etc/nginx/conf.d
-      - ./certbot/www:/var/www/certbot
-      - ./certbot/conf:/etc/letsencrypt
-    ports:
-      - "81:80"
-      - "443:443"
-    depends_on:
-      - backend
-      - frontend
-    networks:
-      - app_network
+  # Nginx (Reverse Proxy)
+  # nginx:
+  #   image: nginx:latest
+  #   container_name: nginx
+  #   restart: unless-stopped
+  #   volumes:
+  #     - ./frontend:/app/frontend
+  #     - ./nginx/conf.d:/etc/nginx/conf.d
+  #     - ./certbot/www:/var/www/certbot
+  #     - ./certbot/conf:/etc/letsencrypt
+  #   ports:
+  #     - "81:80"
+  #     - "443:443"
+  #   depends_on:
+  #     - backend
+  #     - frontend
+  #   networks:
+  #     - app_network
 
 volumes:
   db_data:
