🔨 [JIRA-S12P11B106-169] Fix : placeholder 추가

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ meeting_minutes/
 # Edit at https://www.toptal.com/developers/gitignore?templates=pycharm,vs,django,vuejs
 
 *.png
+!cover-image-placeholder.png
 
 ### Django ###
 *.log
