--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,6 +66,8 @@ before_script:
   - echo "REDIS_HOST=$REDIS_HOST" >> .env
   - echo "REDIS_PORT=$REDIS_PORT" >> .env
 
+  - echo "JUPYTER_URL=$JUPYTER_URL" >> .env
+
 build_backend:
   stage: build
   tags:
