--- a/.gitignore
+++ b/.gitignore
@@ -658,3 +658,5 @@ momoso-450108-0d3ffb86c6ef.json
 *.rdb
 
 # End of https://www.toptal.com/developers/gitignore/api/redis
+
+Backend/audio_uploads/
