--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "dayjs": "^1.11.13",
     "github-markdown-css": "^5.8.1",
     "lodash": "^4.17.21",
+    "nanoid": "^5.1.0",
     "openvidu-browser": "^2.31.0",
     "openvidu-node-client": "^2.31.0",
     "react": "^19.0.0",
