--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,6 +67,10 @@ before_script:
   - echo "REDIS_HOST=$REDIS_HOST" >> .env
   - echo "REDIS_PORT=$REDIS_PORT" >> .env
 
+  - echo "ENVIRONMENT=$ENVIRONMENT" >> .env
+  - echo "FRONTEND_REDIRECT_URI=$FRONTEND_REDIRECT_URI" >> .env
+  - echo "REDIRECT_URI=$REDIRECT_URI" >> .env
+
 build_backend:
   stage: build
   tags:
