--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ before_script:
   - docker info
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 
+  - echo $TAG
   - mkdir -p ~/.ssh
   - echo "🔑 Set ENV"
 
@@ -67,9 +68,12 @@ before_script:
   - echo "REDIS_HOST=$REDIS_HOST" >> .env
   - echo "REDIS_PORT=$REDIS_PORT" >> .env
 
+  - echo "JUPYTER_URL=$JUPYTER_URL" >> .env
+
   - echo "ENVIRONMENT=$ENVIRONMENT" >> .env
   - echo "FRONTEND_REDIRECT_URI=$FRONTEND_REDIRECT_URI" >> .env
   - echo "REDIRECT_URI=$REDIRECT_URI" >> .env
+
 
 build_backend:
   stage: build
