--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   backend:
     image: kwon0528/b106-backend:release
+    env_file:
+      - .env
     container_name: prod-backend
     environment:
       DATABASE_URL: "mysql+pymysql://$DB_USER:$DB_PASSWD@$DB_HOST:$DB_PORT/$DB_NAME?charset=utf8"
@@ -15,6 +17,8 @@ services:
     #   context: ./Frontend
     #   dockerfile: Dockerfile.prod
     image: kwon0528/b106-frontend:release
+    env_file:
+      - .env
     container_name: prod-frontend
     volumes:
       - ./frontend_build:/app/frontend_build
