--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,6 +27,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.15.1",
     "react-markdown": "^9.0.3",
     "react-router-dom": "^7.1.5",
     "react-share": "^5.2.0",
