🔨 [JIRA-S12P11B106-169] Fix: app.conf 수정

--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -58,9 +58,30 @@ server {
     
     # ✅ 🚀 **API 요청을 백엔드(FastAPI, Django 등)로 프록시 설정**
     location /api/ {
-        proxy_pass http://backend:8000/api/;  # ✅ 백엔드 컨테이너 주소 (FastAPI, Django 등)
+        proxy_pass http://backend:8000/api/;
+    
+        # 타임아웃 설정 추가
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        
+        # 헤더 설정
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # 프록시 버퍼 설정
+        proxy_buffering on;
+        proxy_buffer_size 128k;
+        proxy_buffers 4 256k;
+        proxy_busy_buffers_size 256k;
+        
+        # 오류 처리
+        proxy_next_upstream error timeout http_502 http_503 http_504;
+        
+        # HTTP 버전 설정
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
     }
 }
