--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,7 +1,7 @@
 services:
 
   backend:
-    image: kwon0528/b106-backend:develop
+    image: kwon0528/b106-backend:release
     container_name: dev-backend
     environment:
       DATABASE_URL: mysql+pymysql://$DB_USER:$DB_PASSWD@$DB_HOST:$DB_PORT/$DB_NAME?charset=utf8
