--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -34,6 +34,7 @@
     "react-share": "^5.2.0",
     "react-social-icons": "^6.22.0",
     "recordrtc": "^5.6.2",
+    "uuid": "^11.1.0",
     "wavefile": "^11.0.0"
   },
   "devDependencies": {
